@@ -2,6 +2,9 @@
         Contains changes made to the data files under dcw-gmt/orig etc
 -----------------------------------------------------------------------------------------
 
+2022-05-20	pwessel
+		New 2.1.1 released.
+
 2022-04-06	esteban82
 		Add four continental sectors in dcw-collections. Issue #74
 		
